--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
     </nav>
 
 
-    <section class="page-title" style="background-image: url('https://images.unsplash.com/photo-1453873623425-04e3561289aa?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375');">
+    <section class="page-title" style="background-image: url('https://static.pexels.com/photos/6330/smartphone-notebook-technology-calendar-large.jpg');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">Contact Us</h1>  
