--- a/indspec.html
+++ b/indspec.html
@@ -61,7 +61,7 @@
         </div>
         <!-- /.container -->
     </nav>
-    <section class="page-title" style="background-image: url('img/services.jpg');">
+    <section class="page-title" style="background-image: url('https://images.unsplash.com/uploads/1412739483594d16c8046/a9a53469?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">Industry Specialization</h1>  
