--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
         <!-- /.container -->
     </nav>
 
-    <section class="page-title" style="background-image: url('img/services.jpg');">
+    <section class="page-title" style="background-image: url('https://static.pexels.com/photos/6053/man-hands-reading-boy-large.jpg');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">News</h1>  
