--- a/partners.html
+++ b/partners.html
@@ -60,7 +60,7 @@
         </div>
         <!-- /.container -->
     </nav>
-    <section class="page-title" style="background-image: url('img/services.jpg');">
+    <section class="page-title" style="background-image: url('https://tookapic.imgix.net/photos/2016/28/a/b/ab9017f9fe85a920b9f0b03d5d4bcb5f.JPG?w=770&q=70&s=a95545a1c6c8a51454818bb586850a20');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">Our Partners</h1>  
@@ -68,21 +68,6 @@
             </div>
         </div>
         <div class="overlay"></div>
-    </section>
-
-    <section class="section-content">
-        <div class="container">
-            <div class="section-title text-center">    
-                
-                <img src="img/tedx.png"> 
-                <p class="subhead">
-                    TEDxAccra’s mission of “Ideas worth Spreading” reaches far beyond the conference and video series, encompassing a variety of projects and initiatives that leverage the power of ideas. The main aim of organizing is to create spaces for hope and possibility for the future leaders of Ghana.
-                    <br>
-                    <a href="http://tedxaccra.org">click here for more information</a>
-               </p>
-
-            </div>                               
-        </div>
     </section>
 
     <section class="section-content">
