--- a/news.html
+++ b/news.html
@@ -45,9 +45,9 @@
                     <li>
                         <a href="partners.html">Our Partners</a>
                     </li>
-                    <li>
-                        <a href="news.html" class="active-menu">News</a>
-                    </li>
+<!--                     <li>
+                        <a href="news.html">News</a>
+                    </li> -->
                     <li>
                         <a href="about.html">About Us</a>
                     </li>
