--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
 		<link rel="stylesheet" type="text/css" href="css/fullpage-slider.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 	</head>
 
 	<body>
@@ -340,8 +341,9 @@
     		<span class="subhead">You can now contact us at any of our locations in the United States or Ghana.</span>
     	</div>	
 
-    	<div class="container">
-    		<img src="img/map.jpg" class="img-responsive">
+    	<div class="container map-container">
+            <div id="map"></div>
+            <div class="map-overlay"></div>
     	</div>
 
     	<div class="container">
@@ -380,12 +382,22 @@
         &copy; Bridgelake Associate Copyright 2015 
     </footer>
 	
-
-	<script src="js\jquery-2.1.4.min.js"></script> 
-    <script src="js\jquery.parallax-1.1.3.js"></script>
-	<script src="js\bootstrap.js"></script> 
-    <script src="js\smoothscroll.js"></script>
-    <script src="js\scripts.js"></script>
+<!--     <script>
+      function initMap() {
+        var mapDiv = document.getElementById('map');
+        var map = new google.maps.Map(mapDiv, {
+          center: {lat: 44.540, lng: -78.546},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+        async defer></script> -->
+		<script src="js\jquery-2.1.4.min.js"></script> 
+		<script src="js\jquery.parallax-1.1.3.js"></script>
+		<script src="js\bootstrap.js"></script> 
+		<script src="js\smoothscroll.js"></script>
+		<script src="js\scripts.js"></script>
 	
 	
 </body>
