--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+		<meta name="viewport" content="width=device-width">
 		<meta name="Bridgelake Associate" content="">
 
 		<title>Bridgelake Associates</title>
@@ -304,7 +304,7 @@
 										<label for="message">Message</label> 
 										<textarea class="form-control input-lg required" id="message" name="message" 
 										placeholder="Enter Message" required="" rows="12"></textarea>
-									</div>	
+									</div>	 
 								</div>
 							</div>
 						</div>
@@ -321,12 +321,6 @@
 			</div>
 		</div>
         <ul class="bg-squares">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
             <li></li>
             <li></li>
             <li></li>
@@ -397,7 +391,7 @@
 		<script src="js\jquery.parallax-1.1.3.js"></script>
 		<script src="js\bootstrap.js"></script> 
 		<script src="js\smoothscroll.js"></script>
-		<script src="js\scripts.js"></script>
+		<script src="js\scripts.js"></script> 
 	
 	
 </body>
