Adding logo and Tweaks

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="css/fullpage-slider.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
 	</head>
 
 	<body>
@@ -28,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates | Contact</a>
+                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -160,8 +161,9 @@
             <span class="subhead">You can now contact us at any of our locations in the United States or Ghana.</span>
         </div>  
 
-        <div class="container">
-            <img src="img/map.jpg" class="img-responsive">
+        <div class="container map-container">
+            <div id="map"></div>
+            <div class="map-overlay"></div>
         </div>
 
         <div class="container">
@@ -193,11 +195,11 @@
 
 	    <footer class="text-center navbar-bottom">
 	    	<div class="social-icon">
-	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
-	        </div>
-	        &copy; Bridgelake Associates Copyright 2015
+            <a href="https://facebook.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
+            <a href="https://twitter.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
+            <a href="https://linkedin.com/in/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-linkedin-square fa-3x"></i> </a>                                       
+        </div>
+	        &copy; Bridgelake Associates Copyright 2016
 	    </footer>
 
 
