--- a/indspec.html
+++ b/indspec.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates | Industry Specialization</a>
+                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -244,11 +244,11 @@
 
 	    <footer class="text-center">
 	    	<div class="social-icon">
-	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
-	        </div>
-	        &copy; Bridgelake Associates Copyright 2015 
+            <a href="https://facebook.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
+            <a href="https://twitter.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
+            <a href="https://linkedin.com/in/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-linkedin-square fa-3x"></i> </a>                                       
+        </div>
+	        &copy; Bridgelake Associates Copyright 2016
 	    </footer>
 
 
@@ -267,7 +267,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Banking and Financial Institutions</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/bank.jpg" alt="">
                             <p>
@@ -304,7 +304,7 @@
                     <div class="col-lg-10 col-lg-offset-1">
                         <div class="modal-body">
                             <h2>Retail</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/retail.jpg" alt="">
                             <p>
@@ -334,7 +334,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Telecommunications</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/tele.jpg" alt="">
                             <p>Telecom companies are receiving huge amounts of data from customers. This data can be analyzed and utilized to benefit telecom companies. Big data analytics can be used by telecom companies to better understand their customers and improve revenue streams. Bridgelake Associates helps telecoms build customer centric outcomes,  enterprise-wide big data footprint thereby increasing productivity and optimizing networks through the wealth of subscriber data information available to them. </p>
@@ -362,7 +362,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>NGOs</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/ngo.jpg" alt="">
                             <p>Our pro-bono services to NGO’s is one of our strongest Corporate Social Responsibility policy. We help NGO’s to create social good by analyzing data used to inform critical decisions. With ownership of mobile phones spreading across Ghana and Africa, Bridgelake Associates believes data collected from people can be used to help flood victims, disaster areas, an epidemic breakout etc. Our team is very responsive to the needs of these social institutions and their desire to solve problems in developing countries.
@@ -391,7 +391,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Travel and Hospitality</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/trav.jpg" alt="">
                             <p>
@@ -421,7 +421,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Government Institutions</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/gov.jpg" alt="">
                             <p>Government agencies in Ghana face enormous challenge with using data to formulate policies. Most agencies do not have the means to collect, analyze and visualize data. Bridgelake Associates works with the various Ministries, Departments and Agencies (MDA) as well as the various Metropolitan, Municipal and District Assemblies (MMDA). We can help the government analyze large set of data to improve national security. Our solutions can help national security to track data and prevent fraud. We can help the tax organizations analyze both structured and unstructured data to identify discrepancies and multiple identities and also to prevent tax fraud. We can help the statistical department collect and analyze their data and make accurate projections. The various identification departments can benefit from our big data analytic capabilities. 
@@ -450,7 +450,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Mining, Oil and Gas</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/mog.jpg" alt="">
                             <p>Our big data analytics tool help oil and gas companies use the technology to collect, manage and analyze seismic, drilling and production data. Oil and gas companies can gain new insights that can help increase drilling and production performance while preventing safety at their operations site. We help companies optimize their business operations and reduce cost of operation. We help mining, oil and gas companies predict equipment failure thereby increasing availability and reliability of their equipment. We use predictive analytics to detect threats which leads to increase security.
@@ -479,7 +479,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Power and Utilities</h2>
-                            <hr>
+                            <div class="line line-white"></div> 
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive img-centered" src="img/indspec/power.jpg" alt="">
                             <p>Bridgelake Associates can help power companies in Ghana analyze customer consumption trends that leads to improved service delivery. The advent of the smart meters has led to increase in data collection. Analyzing this data can lead to improved demand response capability and load shedding capabilities. We help utility companies quickly get up to speed with the new smart grid technologies with its associated data complications. 
