--- a/partners.html
+++ b/partners.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="Kweku Kwabi" content="">
 
-		<title>Bridgelake Associates | Partnes</title>
+		<title>Bridgelake Associates | Partners</title>
 
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates | Partners</a>
+                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="section-title text-center">    
                 
-                <img src="img/tedx.png"> 
+                <img src="img/tedx.png" class="img-responsive"> 
                 <p class="subhead">
                     TEDxAccra’s mission of “Ideas worth Spreading” reaches far beyond the conference and video series, encompassing a variety of projects and initiatives that leverage the power of ideas. The main aim of organizing is to create spaces for hope and possibility for the future leaders of Ghana.
                     <br>
@@ -88,13 +88,13 @@
     <!-- Footer -->
   
  <!-- Footer -->
-    <footer class="text-center">
+    <footer class="text-center" style="position:absolute; bottom:0; width:100%;">
         <div class="social-icon">
-            <a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-            <a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-            <a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>                                       
+            <a href="https://facebook.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
+            <a href="https://twitter.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
+            <a href="https://linkedin.com/in/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-linkedin-square fa-3x"></i> </a>                                       
         </div>
-        &copy; Bridgelake Associates Copyright 2015 
+        &copy; Bridgelake Associates Copyright 2016
     </footer>
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
