--- a/services.html
+++ b/services.html
@@ -28,7 +28,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates | Services</a>
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive img-centered" src="img/logo/bla1.png" alt="" width="90px" height="90px">
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -160,12 +162,12 @@
    
     <!-- Footer -->
     <footer class="text-center">
-    	<div class="social-icon">
-    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-			<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-			<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
+        <div class="social-icon">
+            <a href="https://facebook.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
+            <a href="https://twitter.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
+            <a href="https://linkedin.com/in/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-linkedin-square fa-3x"></i> </a>                                       
         </div>
-        &copy; Bridgelake Associates Copyright 2015 
+        &copy; Bridgelake Associates Copyright 2016
     </footer>
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
