--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="Kweku Kwabi" content="">
 
-		<title>Bridgelake Associates | Partnes</title>
+		<title>Bridgelake Associates | Partners</title>
 
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates | Partners</a>
+                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -269,7 +269,7 @@
 				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
 				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
 	        </div>
-	        &copy; Bridgelake Associates Copyright 2015
+	        &copy; Bridgelake Associates Copyright 2016
 	    </footer>
 	
 	<script src="js\jquery-2.1.4.min.js"></script> 
