--- a/index.html
+++ b/index.html
@@ -263,8 +263,18 @@
 				<!-- Section title -->
 				<div class="element-line">
 					<!-- form contact -->
-					<form id="user_submit_form" name="user_submit_form" onsubmit="return false">
+					<form id="user_submit_form" name="user_submit_form" onsubmit="return false" action="//formspree.io/bridgelakeassoc@gmail.com"
+      method="POST">
 						<!-- <form name="user_submit_form" id="user_submit_form" onSubmit="return false" role="form">-->
+
+<form action="//formspree.io/bridgelakeassoc@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>
+
+
 						<div class="form-respond text-center"></div>
 						<div class="row">
 							<div class="col-md-6 col-sm-6 col-md-6 col-xs-12">
