Fixed services boxes

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <div class="container" style="color:white;">
             <div class="row service-row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-phone wow bounceIn text-primary" style="color:white;"></i>
                         <h3>Consulting Services</h3>
@@ -164,7 +164,7 @@
                         </div>      
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-database wow bounceIn text-primary" data-wow-delay=".1s" style="color:white;"></i>
                         <h3>Data Management Platform</h3>
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-cloud-download wow bounceIn text-primary" data-wow-delay=".2s" style="color:white;"></i>
                         <h3>Analytics & Insights Platform</h3>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <div class="service-box last-service">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s" style="color:white;"></i>
                         <h3>Big Data Analytics</h3>
@@ -205,19 +205,19 @@
 													</div>
                         </div>
                     </div>
-                </div>
+                </div> 
             </div>
             <div class="row ondesktop">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-sm-6 text-center">
                     <a href="services.html" class="btn view-more">view more</a>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-md-6 text-center">
                     <a href="services.html" class="btn view-more">view more</a>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-md-6 text-center">
                     <a href="services.html" class="btn view-more">view more</a>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-md-3 col-md-6 text-center">
                     <a href="services.html" class="btn view-more">view more</a>
                 </div>
             </div>
