--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
       method="POST">
 						<!-- <form name="user_submit_form" id="user_submit_form" onSubmit="return false" role="form">-->
 
-<form action="//formspree.io/bridgelakeassoc@gmail.com"
+<!-- <form action="//formspree.io/bridgelakeassoc@gmail.com"
       method="POST">
     <input type="text" name="name">
     <input type="email" name="_replyto">
     <input type="submit" value="Send">
-</form>
+</form> -->
 
 
 						<div class="form-respond text-center"></div>
@@ -310,7 +310,7 @@
 									<!-- Form group -->
 									<div class="form-group">
 										<label for="email">Email</label> <input class=
-										"form-control input-lg required email" id="email" name="email"
+										"form-control input-lg required email" id="email" name="_replyto"
 										placeholder="Enter your email id" required="" type="email">
 									</div>
 									<!-- Form group -->
@@ -347,7 +347,7 @@
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="action form-button medium">
-									<button class="btn view-more">Send</button>
+									<button class="btn view-more" value="Send" type="submit" value="Send">Send</button>
 								</div>
 							</div>
 						</div>
