More Mobile Fixes

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
     </header>
 
 	<!-- Page Content -->
-	<section class="section-content">
+	<section class="section-content p-b-50">
     	<div class="container">
         	<div class="section-title text-center">  
 				<h2 class="heading">Building Customer Equity in the Age of Technology</h2>   
                 <div class="line line-white"></div>      
                 <div class="subhead">
-	               Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. This sophistication will mean companies will start generating data from consumers.
+	               <strong>Africa is quickly going digital due to rapid urbanization and strong economic growth.</strong> As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. This sophistication will mean companies will start generating data from consumers.
 	               <br>
 	               <br>
 	               Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent. 
@@ -247,7 +247,7 @@
                                         <span><img src="img/man1.png" class="img-responsive"></span>
                                         <p>&nbsp;</p>
 
-                                        <p style="color:#ffffff;">
+                                        <p style="color:#ffffff;padding: 0 10px;">
                                         Source: Customer Equity: Building and Managing Relationships As Valuable Assets. Robert C. Blattberg, Gary Getz & Jacquelyn S. Thomas | Harvard Business School Press.
                                         </p>
                                         <br>
