--- a/indspec.html
+++ b/indspec.html
@@ -70,13 +70,13 @@
         </div>
         <div class="overlay"></div>
     </section>
-
+ 
     <section class="section-content">
         <div class="container">
             <div class="section-title text-center">
                 
                 <p class="subhead">
-                    Bridgelake Associates provides management consulting using data analytics tools. We provide business intelligence, predictive analytics and data discovery for companies that want to have better insights into their data.  We provide cloud based analytics consulting through advisory services, big data analytics, dashboards and algorithms.  We use various and current big data analytic tools to provide unparalleled insights to companies in various industries.
+                    <strong>Bridgelake Associates</strong> provides management consulting using data analytics tools. We provide business intelligence, predictive analytics and data discovery for companies that want to have better insights into their data.  We provide cloud based analytics consulting through advisory services, big data analytics, dashboards and algorithms.  We use various and current big data analytic tools to provide unparalleled insights to companies in various industries.
                </p>
             </div>                               
         </div>
@@ -220,11 +220,11 @@
 
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
+<!--                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div>
+                        </div> -->
                         <img src="img/comingsoon.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
