--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
 
                         <h2 class="heading-white">Consulting Services</h2>
                         <p class="subhead-white">
-						 Bridgelake Associates provides companies in Ghana with management consulting services. Our   services include strategy consulting, mergers and acquisitions. Our analytics department helps companies to stay competitive and provide solutions to help them to be high performance.       
+						 <strong>Bridgelake Associates</strong> provides companies in Ghana with management consulting services. Our   services include strategy consulting, mergers and acquisitions. Our analytics department helps companies to stay competitive and provide solutions to help them to be high performance.       
                         </p>               
 					</div>
 					<div class="col-md-4">
@@ -108,7 +108,7 @@
 
                         <h2 class="heading">Data Management Platform</h2>
                         <p class="subhead">
-                        Bridgelake Associates offers database design and management services to help your business grow and to create efficiency in your daily operations. From modeling, custom database design, we have the expertise to deliver secure data management and security for your company or organization. Our database team will take the time to learn about your business and the your unique data management needs
+                        <strong>Bridgelake Associates</strong> offers database design and management services to help your business grow and to create efficiency in your daily operations. From modeling, custom database design, we have the expertise to deliver secure data management and security for your company or organization. Our database team will take the time to learn about your business and the your unique data management needs
                         </p>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                         <h2 class="heading-white">Customer/Volunteer Analytics & Insights Platform</h2>
 
                         <p class="subhead-white">
-                        Bridgelake Associates seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports.
+                        <strong>Bridgelake Associates</strong> seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -149,7 +149,7 @@
                         <h2 class="heading">Big Data Analytics & Cloud Infrastructure</h2>
 
                         <p class="subhead">
-                        Bridgelake Associates provides insights, patterns, and unknown correlations, market trends on large data sets containing variety of data types/structure and from all sorts of devices or industrial machines.
+                        <strong>Bridgelake Associates</strong> provides insights, patterns, and unknown correlations, market trends on large data sets containing variety of data types/structure and from all sorts of devices or industrial machines.
                         We help/advice companies who seek to migrate from Old Data Warehouses to the Hadoop Architecture for analytics.
                         Our Big Data consultants will take the time to understand your needs as a company or organization
 
