--- a/partners.html
+++ b/partners.html
@@ -88,7 +88,7 @@
     <!-- Footer -->
   
  <!-- Footer -->
-    <footer class="text-center" style="position:absolute; bottom:0; width:100%;">
+    <footer class="text-center">
         <div class="social-icon">
             <a href="https://facebook.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
             <a href="https://twitter.com/bridgelakeassoc" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
