Added logo to pages

--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive img-centered" src="img/logo/bla1.png" alt="" width="90px" height="90px">
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -137,7 +139,7 @@
                                                 </ul>                        
                                             </div>
                                         </div>
-                                        <p style="color:#ffffff;">
+                                        <p style="color:#ffffff;padding: 0 10px;">
                                         Bridgelake Associates has core values that reflects in the culture and principles of the company. The company ensures thes e values are adhered to by it’s employees. These shared values have created standards, code of conduct and practices. 
                                         </p>
                                         <br>
