--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
+<!--                 <a class="navbar-brand" href="index.html">
                     <img class="img-responsive img-centered" src="img/logo/bla2.png" alt="" width="80px" height="80px">
+                </a> -->
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive img-centered" src="img/logo/bla1.png" alt="" width="90px" height="90px">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
