--- a/indspec.html
+++ b/indspec.html
@@ -29,7 +29,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive img-centered" src="img/logo/bla1.png" alt="" width="90px" height="90px">
+                </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
