Added strong tag where needed in subhead

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6">
                     <h2><strong>Company Mission</strong></h2>
                     <div class="subhead">
-                        Bridgleake Associates ensures companies make sense of their valuable data by providing business intelligence and analytics which increases their competitive advantage in the marketplace.            
+                        <strong>Bridgleake Associates</strong> ensures companies make sense of their valuable data by providing business intelligence and analytics which increases their competitive advantage in the marketplace.            
                     </div> 
                     <i class="fa fa-rocket fa-5x"></i>
                 </div>
@@ -95,7 +95,7 @@
                 <div class="col-md-6">
                     <h2><strong>Company Vision</strong></h2>
                     <div class="subhead">
-                        Bridgleake Associates ensures companies make sense of their valuable data by providing business intelligence and analytics which increases their competitive advantage in the marketplace.          
+                        <strong>Bridgleake Associates</strong> ensures companies make sense of their valuable data by providing business intelligence and analytics which increases their competitive advantage in the marketplace.          
                     </div>
                     <i class="fa fa-eye fa-5x"></i>
                 </div>
