--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 				<!-- Section title -->
 				<div class="element-line">
 					<!-- form contact -->
-					<form id="user_submit_form" name="user_submit_form" onsubmit="return false">
+					<form id="user_submit_form" name="user_submit_form"  action="http://formspree.io/bridgelakeassoc@gmail.com" method="POST">
 						<!-- <form name="user_submit_form" id="user_submit_form" onSubmit="return false" role="form">-->
 						<div class="form-respond text-center"></div>
 						<div class="row">
@@ -297,7 +297,7 @@
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="action form-button medium">
-									<button class="btn btn-success btn-lg">Send</button>
+									<button class="btn view-more" value="Send" type="submit" value="Send">Send</button>
 								</div>
 							</div>
 						</div>
