--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 									<!-- Form group -->
 									<div class="form-group">
 										<label for="email">Email</label> <input class=
-										"form-control input-lg required email" id="email" name="email"
+										"form-control input-lg required email" id="email" name="_replyto"
 										placeholder="Enter your email id" required="" type="email">
 									</div>
 									<!-- Form group -->
