--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 				<!-- Section title -->
 				<div class="element-line">
 					<!-- form contact -->
-					<form id="user_submit_form" name="user_submit_form" onsubmit="return false" action="http://formspree.io/bridgelakeassoc@gmail.com" method="POST">
+					<form id="user_submit_form" name="user_submit_form" action="http://formspree.io/bridgelakeassoc@gmail.com" method="POST">
 						<!-- <form name="user_submit_form" id="user_submit_form" onSubmit="return false" role="form">-->
 
 <!-- <form action="//formspree.io/bridgelakeassoc@gmail.com"
